--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,18 +8,18 @@ jobs:
     steps:
       - checkout
 
-      # Install Node.js and npm with sudo
+      # Install Node.js and npm without sudo
       - run:
           name: Install Node.js and npm
           command: |
-            sudo apt-get update
-            sudo apt-get install -y nodejs npm
+            apt-get update
+            apt-get install -y nodejs npm
 
       # Install Netlify CLI
       - run:
           name: Install Netlify CLI
           command: |
-            sudo npm install -g netlify-cli
+            npm install -g netlify-cli
 
       # Install project dependencies and build
       - run:
