--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,17 +3,10 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: mcr.microsoft.com/dotnet/sdk:6.0
+      - image: circleci/node:latest
 
     steps:
       - checkout
-
-      # Install Node.js and npm without sudo
-      - run:
-          name: Install Node.js and npm
-          command: |
-            apt-get update
-            apt-get install -y nodejs npm
 
       # Install Netlify CLI
       - run:
