--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,17 @@
-version: 2.1
-
+version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:latest
-
+      - image: circleci/node:10
     steps:
       - checkout
-
-      # Install Netlify CLI
       - run:
-          name: Install Netlify CLI
-          command: |
-            npm install -g netlify-cli
-
-      # Install project dependencies and build
+          name: Install dependencies
+          command: npm install
       - run:
-          name: Install project dependencies and build
-          command: |
-            dotnet restore
-            dotnet build --configuration Release
-
-      # Deployment to Netlify
+          name: Build
+          command: npm run build
       - run:
           name: Deploy to Netlify
           command: |
-            echo "Deploying to Netlify..."
-            dotnet publish -c Release -o ./publish
-            netlify deploy --prod --dir=./publish --auth $NETLIFY_AUTH_TOKEN
+            curl -X POST -d '{}' $NETLIFY_WEBHOOK_URL
